--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "type": "library",
     "require": {
         "league/oauth2-server": "~7.0.0",
-        "zendframework/zend-diactoros": "~1.7.1"
+        "zendframework/zend-diactoros": "~1.7.1",
+        "tuupola/base62": "dev-master"
     },
     "license": "MIT",
     "authors": [
