--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "require": {
         "league/oauth2-server": "~7.0.0",
         "zendframework/zend-diactoros": "~1.7.1",
-        "tuupola/base62": "~0.9.0"
+        "tuupola/base62": "~0.9.0",
+        "robwittman/leaky-bucket-rate-limiter": "~1.0.0"
+    },
+    "require-dev": {
+      "codeception/codeception": "~2.0"
     },
     "license": "MIT",
     "authors": [
