--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "league/oauth2-server": "~7.0.0",
         "zendframework/zend-diactoros": "~1.7.1",
         "tuupola/base62": "~0.9.0",
-        "robwittman/leaky-bucket-rate-limiter": "~1.0.0"
+        "robwittman/leaky-bucket-rate-limiter": "~1.0.0",
+        "idealo/php-middleware-stack": "~0.2.0"
     },
     "require-dev": {
       "codeception/codeception": "~2.0"
